--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="choices">
         <div class="choice" id="r">
-            <img src="images/rock.png" alt="">
+            <img src="images/Rock.png" alt="">
         </div>
         <div class="choice" id="p">
             <img src="images/Paper.png" alt="">
